# Site-Clone-ChatGPT-with-Flask

./: README.md  app.py  pyproject.toml
static/src/css/: input.css
templates/: index.html
